--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "multer": "^1.4.2",
     "uuid": "^8.1.0"
   },
+  "engines": {
+    "node": "14.x"
+    }, 
   "devDependencies": {
     "chai": "^3.2.0",
-    "chai-http": "^1.0.0",
+    "chai-http": "^4.3.0",
     "mocha": "^8.1.1"
   }
 }
